--- a/src/components/FicheFilm/FicheFilm.css
+++ b/src/components/FicheFilm/FicheFilm.css
@@ -1,4 +1,3 @@
-
 body > div {
   font-family: 'Reem Kufi', sans-serif;
 }
@@ -101,9 +100,27 @@ img {
 .actors > div p {
   font-size: 17px;
   background: #000;
-  background: -moz-linear-gradient(top, rgb(0, 0, 0, 0.5) 0%, #eee8ec 20%, #fff 100%);
-  background: -webkit-linear-gradient(top, rgb(0, 0, 0, 0.5) 0%, #eee8ec 20%, #fff 100%);
-  background: linear-gradient(to bottom, rgb(0, 0, 0, 0.5) 0%, #eee8ec 20%, #fff 100%);
+  background:
+    -moz-linear-gradient(
+      top,
+      rgb(0, 0, 0, 0.5) 0%,
+      #eee8ec 20%,
+      #fff 100%
+    );
+  background:
+    -webkit-linear-gradient(
+      top,
+      rgb(0, 0, 0, 0.5) 0%,
+      #eee8ec 20%,
+      #fff 100%
+    );
+  background:
+    linear-gradient(
+      to bottom,
+      rgb(0, 0, 0, 0.5) 0%,
+      #eee8ec 20%,
+      #fff 100%
+    );
   border-right: 1px solid #000;
   border-left: 1px solid #000;
   border-bottom: 1px solid #000;
