--- a/src/components/ResultCard/ResultCard.css
+++ b/src/components/ResultCard/ResultCard.css
@@ -16,7 +16,7 @@
   transform: scale(1.07);
 }
 
-.poster {
+.posterResult {
   height: 330px;
   width: 220px;
   flex-direction: row;
@@ -34,7 +34,7 @@
   overflow: hidden;
 }
 
-.title {
+.movietitle {
   display: flex;
   justify-content: center;
   align-items: center;
