--- a/src/components/filterButton/FilterButton.css
+++ b/src/components/filterButton/FilterButton.css
@@ -1,6 +1,4 @@
-button {
-  margin-left: 30vw;
-  margin-top: 5vh;
+.filterButton {
   height: 30px;
   width: 40vw;
   border-radius: 9999px;
@@ -22,10 +20,24 @@ button:active {
   transform: translateY(2px);
 }
 
+.filterButtonBlock {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10vh;
+  margin-top: 2%;
+}
+
 /* Responsive */
 @media screen and (min-width: 600px) {
-  button {
-    width: 20vw;
-    margin-left: 40vw;
+  .filterButton {
+    width: 17vw;
+    height: 3vh;
+  }
+
+  .filterButtonBlock {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 17vh;
+    margin-top: 3%;
   }
 }
