--- a/src/components/searchBar/Search.css
+++ b/src/components/searchBar/Search.css
@@ -1,18 +1,26 @@
 .searchBar {
   display: inline-block;
   text-align: center;
-  margin-top: 70vh;
-  margin-left: 20vw;
   height: 30px;
   width: 60vw;
   opacity: 70%;
   border-radius: 10px;
+  box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.search {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .results {
+  padding: 0;
+  margin: 0;
   margin-top: 20px;
   display: flex;
-  flex-flow: row wrap;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
   margin-bottom: 12vh;
 }
@@ -25,11 +33,28 @@
 }
 
 /* Responsive */
-@media screen and (min-width: 600px) {
+
+@media screen and (max-width: 600px) {
   .searchBar {
     width: 40vw;
     height: 8vh;
-    margin-left: 30vw;
     font-size: 18px;
+  }
+
+  .results li {
+    list-style: none;
+    height: 190px;
+    width: 150px;
+  }
+
+  .results {
+    padding: 0;
+    margin: 0;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-bottom: 6vh;
   }
 }
