--- a/src/components/FicheFilm/FicheFilm.css
+++ b/src/components/FicheFilm/FicheFilm.css
@@ -1,6 +1,3 @@
-
-
-
 body > div {
   font-family: 'Reem Kufi', sans-serif;
 }
@@ -13,15 +10,12 @@ img {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-
   margin-top: 40px;
-
   margin-bottom: 40px;
 }
 
 .backgroundPoster {
   z-index: -1;
-
 
   --main-height: 85vh;
 
@@ -55,7 +49,6 @@ img {
   background-color: rgba(255, 255, 240, 0.247);
   height: 69vh;
   margin-top: 2%;
-
 }
 
 .genres {
@@ -67,7 +60,6 @@ img {
 .genres > p {
   padding-right: 10px;
 }
-
 
 .directorTimeDate {
   font-size: 25px;
@@ -108,29 +100,24 @@ img {
 .actors > div p {
   font-size: 17px;
   background: #000;
-
-  background:
-    -moz-linear-gradient(
-      top,
-      rgb(0, 0, 0, 0.5) 0%,
-      #eee8ec 20%,
-      #fff 100%
-    );
-  background:
-    -webkit-linear-gradient(
-      top,
-      rgb(0, 0, 0, 0.5) 0%,
-      #eee8ec 20%,
-      #fff 100%
-    );
-  background:
-    linear-gradient(
-      to bottom,
-      rgb(0, 0, 0, 0.5) 0%,
-      #eee8ec 20%,
-      #fff 100%
-    );
-
+  background: -moz-linear-gradient(
+    top,
+    rgb(0, 0, 0, 0.5) 0%,
+    #eee8ec 20%,
+    #fff 100%
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgb(0, 0, 0, 0.5) 0%,
+    #eee8ec 20%,
+    #fff 100%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgb(0, 0, 0, 0.5) 0%,
+    #eee8ec 20%,
+    #fff 100%
+  );
   border-right: 1px solid #000;
   border-left: 1px solid #000;
   border-bottom: 1px solid #000;
@@ -166,7 +153,6 @@ img {
   margin-top: 5px;
 }
 
-
 .provIco {
   height: 3.5vh;
   margin: 0.5vw 0.5vw 0.5vw 0;
@@ -177,7 +163,6 @@ img {
   flex-direction: column;
   height: 15vh;
 }
-
 
 @media screen and (max-width: 1920px) {
   .poster {
@@ -250,7 +235,6 @@ img {
   .buttonTrailer:hover .playTriangle:hover {
     opacity: 1;
   }
-
 
   .provIco {
     height: 5vh;
@@ -403,7 +387,6 @@ img {
       width: 193px;
       height: 241px;
     }
-
 
     .actors > div {
       margin: 2px;
