--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,7 +14,7 @@
 
 .menu {
   height: 10vh;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 1000;
   margin-bottom: 1vh;
@@ -44,35 +44,8 @@
       transparent 87%,
       #f5a81b 87.5%,
       #f1bc28
-    ),
-    linear-gradient(
-      50deg,
-      #facc4d 30%,
-      transparent 40%,
-      transparent 87%,
-      #f5a81b 87.5%,
-      #f1bc28
-    ),
-    linear-gradient(
-      60deg,
-      #facc4d 30%,
-      transparent 40%,
-      transparent 75%,
-      #f5a81b 75%,
-      #f1bc28
-    ),
-    linear-gradient(
-      60deg,
-      #f7d067 40%,
-      transparent 25.5%,
-      transparent 75%,
-      #f5a81b 75%,
-      #f1bc28
     );
-  overflow-x: scroll;
   background-size: 100vw 1200px;
-  background-attachment: scroll;
-  background-position: cover;
 }
 
 .bm-burger-bars {
