--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -1,4 +1,3 @@
-
 .categories {
   font-size: 20px;
   text-align: center;
@@ -18,7 +17,7 @@
   transform: translateY(-8px);
 }
 
-.categoriesContenair {
+.categoriesContainer {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -48,12 +47,13 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin: 0.5vw 0 3vh 0;
 }
 
 .select {
-  font-size: 3vh;
+  font-size: 2.5vh;
   text-align: center;
-  width: 20vw;
+  width: 22vw;
   border: 2px solid black;
   cursor: pointer;
   background: rgba(255, 255, 255, 0.4);
@@ -61,30 +61,73 @@
   box-shadow: 0 5px 15px 1px #8f742c;
   font-family: 'Reem Kufi', sans-serif;
   border-radius: 9999px;
-  margin: 0.5vw;
+}
+
+.choose {
+  margin-top: 10vh;
+  font-size: 40px;
+  margin-bottom: 4vh;
+  text-align: center;
+}
+
+.year {
+  margin-top: 10vh;
+  font-size: 30px;
+}
+
+.head {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 1vw;
 }
 
 @media screen and (max-width: 390px) {
-  .categories {
-    font-size: 1.5vh;
+  .choose {
+    margin-top: 17vh;
+    font-size: 40px;
+  }
+
+  .year {
+    margin-top: 6vh;
+    font-size: 30px;
     text-align: center;
-    border: 2px solid black;
-    width: 13%;
-    height: 20vh;
-    cursor: pointer;
-    background: rgba(255, 255, 255, 0.123);
-    -webkit-box-shadow: 0 5px 15px 1px #8f742c;
-    box-shadow: 0 5px 15px 1px #8f742c;
-    margin-bottom: 1px;
-    writing-mode: vertical-rl;
-    text-orientation: sideways-right;
-    font-family: 'Reem Kufi', sans-serif;
+  }
+
+  .categories {
+    font-size: 14px;
+    width: 113px;
+    height: 70px;
+    overflow: auto;
+    border: 1px solid #f76c6c;
+  }
+
+  .categories:hover {
+    transform: translateY(0);
+  }
+
+  .movieimg {
+    width: 150px;
+    height: auto;
+    border-top: 1px solid #000;
+    border-right: 1px solid #000;
+    border-left: 1px solid #000;
+  }
+
+  .titleMovie > p {
+    width: 150px;
+  }
+
+  .moviesCategories {
+    text-align: center;
+    width: 100%;
+    font-size: 17px;
   }
 
   .select {
-    font-size: 3vh;
+    font-size: 2.5vh;
     text-align: center;
-    width: 75vw;
+    width: 60vw;
     border: 2px solid black;
     cursor: pointer;
     background: rgba(255, 255, 255, 0.4);
@@ -95,13 +138,9 @@
     margin: 0.5vw;
   }
 
-  .categoriesContenair {
+  .head {
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: column;
     justify-content: center;
-    text-align: center;
-    width: 100%;
-    margin-top: 15vh;
-    margin-bottom: 6vh;
   }
 }
